docs/0.16/_sources/api/gammapy.modeling.models.Models.rst.txt
Models
======

.. currentmodule:: gammapy.modeling.models

.. autoclass:: Models
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Models.names
      ~Models.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~Models.append
      ~Models.clear
      ~Models.count
      ~Models.extend
      ~Models.from_yaml
      ~Models.index
      ~Models.insert
      ~Models.pop
      ~Models.read
      ~Models.remove
      ~Models.reverse
      ~Models.to_yaml
      ~Models.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: names
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: append
   .. automethod:: clear
   .. automethod:: count
   .. automethod:: extend
   .. automethod:: from_yaml
   .. automethod:: index
   .. automethod:: insert
   .. automethod:: pop
   .. automethod:: read
   .. automethod:: remove
   .. automethod:: reverse
   .. automethod:: to_yaml
   .. automethod:: write
