docs/0.17/_sources/api/gammapy.modeling.models.Models.rst.txt
Models
======

.. currentmodule:: gammapy.modeling.models

.. autoclass:: Models
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Models.covariance
      ~Models.names
      ~Models.parameters
      ~Models.parameters_unique_names

   .. rubric:: Methods Summary

   .. autosummary::

      ~Models.append
      ~Models.clear
      ~Models.copy
      ~Models.count
      ~Models.extend
      ~Models.from_dict
      ~Models.from_yaml
      ~Models.index
      ~Models.insert
      ~Models.pop
      ~Models.read
      ~Models.read_covariance
      ~Models.remove
      ~Models.reverse
      ~Models.to_dict
      ~Models.to_yaml
      ~Models.write
      ~Models.write_covariance

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: names
   .. autoattribute:: parameters
   .. autoattribute:: parameters_unique_names

   .. rubric:: Methods Documentation

   .. automethod:: append
   .. automethod:: clear
   .. automethod:: copy
   .. automethod:: count
   .. automethod:: extend
   .. automethod:: from_dict
   .. automethod:: from_yaml
   .. automethod:: index
   .. automethod:: insert
   .. automethod:: pop
   .. automethod:: read
   .. automethod:: read_covariance
   .. automethod:: remove
   .. automethod:: reverse
   .. automethod:: to_dict
   .. automethod:: to_yaml
   .. automethod:: write
   .. automethod:: write_covariance
